--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,61 @@ fill: currentColor;
 }
 
 
+.form-footer {
+    display: flex;
+     margin-left: 80px;
+}
+
+.input-form-footer {
+    display: flex;
+    flex-direction: column;
+
+}
+.form-notification-footer {
+margin-bottom: 16px;
+color: var(--light-color);
+        font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+}
+
+
+
+.input-footer {
+display: flex;
+align-items: center;
+padding-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+border-radius: 4px;
+background-color: var(--title-text-color);
+
+color: var(--light-color);
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+Width:264px;
+Height:40px;
+}
+.footer-form-btm {
+
+    height: 40px;
+ margin-top: 40px;
+    margin-left: 24px;
+    padding: 8px 64px 8px 24px;
+    
+}
+.footer-img-btm {
+    position: relative;
+    display: block;
+}
+
+.image-btm {
+    position: absolute;
+top: 50px;
+   right: 24px;
+}
+
 
 /*---------- portfolio html----------- */
 
@@ -617,12 +672,11 @@ position: relative;
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
     width: 100%;
     height: 100%;
-    transform: translate(0%, 100%);
+    padding-top: 40px;
+    padding-right: 32px;
+    padding-left: 32px;
     background-color: #4D5AE5;
     color: #F4F4FD;
     font-weight: 400;
@@ -630,6 +684,7 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(0%, 100%);
 }
 
 
@@ -683,12 +738,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     top: 50%;
     left: 50%;
     width: 408px;
-    height: 576px;
+    padding: 72px 24px 33px 24px;
     border-radius: 4px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transform: translate(-50%, -50%);
-
 }
 .modal-btm {
     content: "";
@@ -721,4 +775,156 @@ fill: currentColor;
 .modal-btm:hover {
     background-color: var(--hover-color);
     color: var(--light-color);
+}
+
+/* ------ Modal form-------- */
+
+
+.modal_form {
+    display: flex;
+    flex-direction: column;
+
+}
+.modal-notification {
+    margin-bottom: 16px;
+color: var(--title-text-color);
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+}
+
+.modal-form-field {
+    margin-bottom: 8px;
+
+}
+
+.modal-form-textarea {
+    margin-bottom: 16px;
+}
+
+.modal-form-input-desc {
+display: block;
+margin-bottom: 4px;
+color: #8E8F99;
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+}
+
+.modal-form-input-commens {
+width: 100%;
+height: 120px;
+padding-top: 8px;
+padding-left: 16px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+resize: none;
+fill: currentColor;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input-commens::placeholder {
+color: rgba(117, 117, 117, 0.5);
+    font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+}
+
+.modal-form-input-commens:focus {
+    border-color: var(--color-tex-blue);
+    outline: none;
+}
+
+.modal-form-input {
+
+    width: 100%;
+height: 40px;
+padding-left: 38px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+fill: currentColor;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+border-color: var(--color-tex-blue);
+outline: none;
+
+}
+
+.modal-form-input:focus + .form-modal-icon {
+color: var(--color-tex-blue);
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before  {
+display: flex;
+   border: none;
+background-color: var(--color-tex-blue);
+background-image: url(../images/svg/check.svg);
+    background-repeat: no-repeat;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-check:focus + .modal-form-check-desc::before  {
+
+    border-color: var(--hover-color);
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-form-check-desc::before {
+    content: "";
+    position: absolute;
+    left: 24px;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 1.25px solid var(--title-text-color);
+    border-radius: 2px;
+    background-color: var(--light-color);
+    cursor: pointer;
+}
+
+.modal-form-check-desc {
+margin-bottom: 24px;
+padding-left: 24px;
+color: #757575;
+font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+}
+
+.modal-form-check-link {
+    color: var(--color-tex-blue);
+}
+
+.modal-form-btm {
+align-self: center;
+min-width: 169px;
+}
+
+.modal-form-input-wraper {
+    position: relative;
+    display: block;
+   
+}
+
+.form-modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 19px;
+    color: var(--title-text-color);
+    fill: currentColor;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(0, -50%);
+}
+ 
+
+.form-modal-icon:focus {
+    color: var(--color-tex-blue);
+  
 }
